tests/NormalTests/paczka1/fuzzy1/49869907.err
Error in line 14: 82A4yc S289 17,69
Error in line 17: h7c A423 57,5
Error in line 20: 6D9mo4OY S316 35,71
Error in line 21: 82b3I S316 82,7
Error in line 18: h7c S289 3,6
Error in line 23: 6D9mo4OY S289 16,1
Error in line 22: 82b3I A423 86,1
Error in line 34: 38nhTxn2s A487 147,14
Error in line 30: 38nhTxn2s A487 55,4
